update package.json and test scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx ts-node ./index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,7 @@
   "type": "module",
   "dependencies": {
     "ethers": "^4.0.45",
-    "typescript": "^3.8.2",
+    "ts-node": "^8.6.2",
     "web3": "^1.2.6"
   }
 }
